src/test/deca/etapeB/invalid/assign_diff_types.res
./src/test/deca/etapeB/invalid/assign_diff_types.deca:8:2: type not expected
